...G...... [ZBXNEXT-689] added protocol option to net.dns and net.dns.query keys to enable TCP based queries (wiper)
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
...G...... [ZBX-9317] changed proc.mem[] and proc.num[] to return 0 if the specified user does not exist (asaveljevs)
...G...... [ZBX-8513] changed vm.memory.size[available] key on AIX to return the sum of free and cached memory (wiper)
...G...PS. [ZBX-8993] added check for a valid reference of a global regular expression for snmptrap[], log[], logrt[] and eventlog[] items and logeventid(), regexp() and iregexp() trigger functions (igors)
..F....... [ZBX-8698] fixed "Unlink and clear" button being displayed when cloning or full cloning host or template and fixed spacing between "Name" and "Action" in "Linked templates" block in template edit form (Ivo, Krists)
..F....... [ZBX-9018] fixed updating of "config" table in Administration -> General pages (Oleg, Sasha)
...G...PS. [ZBX-9002] fixed log file locking during logging (igors)
..F....... [ZBX-8943] fixed script ordering when using backslashes in popup script menus (arvids)
..F....... [ZBX-8922] fixed form element positioning issues in host add/edit form (arvids)
..F....... [ZBX-8934] removed translation for the bytes unit prefixes (KB, MB, etc) (arvids)
..F....... [ZBX-8888] fixed history.php showing data for 11 more seconds than the defined interval (arvids)
..F.....S. [ZBX-9005] fixed aggregate item check to make forth parameter not mandatory when third parameter is set to 'last' (igors)
...G...... [ZBX-3437] fixed Windows agent to use the configured timeout option when establishing TCP connection (wiper)
........S. [ZBX-8542] improved performance and reduced configuration cache locking when evaluating trigger expressions (wiper)